--- a/Style.css
+++ b/Style.css
@@ -4,6 +4,9 @@ html {
 body {
     margin: 0px 0px;
 }
+header {
+    background-color: rgb(255, 255, 255); border-bottom: solid rgb(223, 223, 223) 1px;
+}
 nav {
     height: 160px; width: 100%; 
 }
@@ -14,7 +17,8 @@ h1 {
     font-family: 'Overpass', sans-serif; cursor:not-allowed;
     font-size: 62px;
     margin-left: 20px; margin-top: 40px; margin-bottom: 18px; margin-right: 20px;  
-}
+
+    }
 ul {
     list-style-type: none;
     margin-top: 0px; padding: 0px;
@@ -32,6 +36,15 @@ nav ul li a{
 a .active, a:hover {
     color: white; background: rgb(71, 71, 71); transform: .5s;
 }
+.img{
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    display: inline-block;
+    right: 0.2%;
+    margin-top: 10px;
+
+}
 /* Button tab section, uses JS from web, not fully understood vid: (coding nepal Responsive Nav menu */
 .checkbtn {
     font-size: 50px; margin-right: 20px; line-height: 160px; cursor: pointer;
@@ -40,6 +53,13 @@ a .active, a:hover {
 #check {
     display: none;
 }
+@media (max-width: 830px) {
+    header .img {
+        display: none;
+    }
+}
+
+
 @media (max-width: 778px) {
     .checkbtn{
         display: block;
@@ -57,6 +77,7 @@ a .active, a:hover {
     #check:checked ~ ul {
         left:0;
     }
+   
 }
 /* This method here needs more to work
 .Main:before,
@@ -103,7 +124,13 @@ a .active, a:hover {
         margin: 0px 2%; ;
 }
     .Sidebar h3{
-        text-align: left;
+        text-align: center;
+    }
+    .Sidebar {
+        margin: 0 0;
+    }
+    .Sidebar ul {
+        margin-left: 5%;
     }
     }
 
@@ -117,4 +144,62 @@ h3, h2 {
 article p sup {
     margin-left: 2%;
     
+
+}
+
+.Date {
+    border-bottom: solid rgb(223, 223, 223) 1px;
+}
+
+h2 { 
+    padding-top: 10px;
+}
+h3 {
+    margin-bottom: 5px;
+}
+
+.Suptext {
+    margin-left: 0px;
+}
+
+aside {
+    align-items: center;
+}
+
+.ProfileBox {
+    display: flex;
+    align-items: center;
+}
+div img {
+    width: 100%;
+    height: 100%;
+}
+
+.Profile{
+   
+    
+    object-fit: contain;
+    max-width: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+
+}
+
+article h3 {
+    text-align: left;
+    border-bottom: solid rgb(223, 223, 223) 1px;
+}
+section {
+    margin: 0 2%;
+    margin-left: 0px;
+}
+article {
+    margin: 0 1%;
+}
+
+
+.TitleColour {
+    background-color: black;
+    color: white;
 }
