--- a/Style.css
+++ b/Style.css
@@ -53,14 +53,12 @@ a .active, a:hover {
 #check {
     display: none;
 }
-@media (max-width: 830px) {
+@media (max-width: 880px) {
     header .img {
         display: none;
     }
 }
-
-
-@media (max-width: 778px) {
+@media (max-width: 880px) {
     .checkbtn{
         display: block;
     }
@@ -76,8 +74,7 @@ a .active, a:hover {
     }
     #check:checked ~ ul {
         left:0;
-    }
-   
+    }  
 }
 /* This method here needs more to work
 .Main:before,
@@ -132,74 +129,44 @@ a .active, a:hover {
     .Sidebar ul {
         margin-left: 5%;
     }
-    }
-
-
+}
 /* Stylings */
-
 h3, h2 {
     text-align: center;
 }
-
 article p sup {
     margin-left: 2%;
-    
-
 }
-
 .Date {
     border-bottom: solid rgb(223, 223, 223) 1px;
 }
-
 h2 { 
     padding-top: 10px;
 }
 h3 {
     margin-bottom: 5px;
 }
-
 .Suptext {
     margin-left: 0px;
 }
-
-aside {
-    align-items: center;
-}
-
 .ProfileBox {
     display: flex;
-    align-items: center;
 }
-div img {
-    width: 100%;
-    height: 100%;
+.Profile{    
+    width: 100%; height: 100%;
+    object-fit: contain; max-width: 220px;
+    margin-left: auto; margin-right: auto; margin-bottom: 10px;
 }
-
-.Profile{
-   
-    
-    object-fit: contain;
-    max-width: 220px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-
-}
-
 article h3 {
     text-align: left;
     border-bottom: solid rgb(223, 223, 223) 1px;
 }
 section {
-    margin: 0 2%;
-    margin-left: 0px;
+    margin: 0 2%; margin-left: 0px;
 }
 article {
     margin: 0 1%;
 }
-
-
 .TitleColour {
-    background-color: black;
-    color: white;
+    background-color: black;color: white;
 }
