--- a/Style.css
+++ b/Style.css
@@ -45,6 +45,9 @@ a .active, a:hover {
     margin-top: 10px;
 
 }
+.Page2 {
+    margin: 0 2%
+}
 /* Button tab section, uses JS from web, not fully understood vid: (coding nepal Responsive Nav menu */
 .checkbtn {
     font-size: 50px; margin-right: 20px; line-height: 160px; cursor: pointer;
@@ -100,7 +103,7 @@ a .active, a:hover {
 
 /* grid method for responsive page(phone grid too) */
 .Main {
-    display:grid; height: 100vh;
+    display:grid; margin-bottom: 40px;
     grid-template-columns: 1fr 4fr; grid-template-areas: "Sidebar Content"; grid-gap: 0.2rem;
 }
 .Sidebar {
@@ -126,9 +129,10 @@ a .active, a:hover {
     .Sidebar {
         margin: 0 0;
     }
-    .Sidebar ul {
+    .Posts, h4 {
         margin-left: 5%;
     }
+    
 }
 /* Stylings */
 h3, h2 {
@@ -146,8 +150,20 @@ h2 {
 h3 {
     margin-bottom: 5px;
 }
+h4 {
+    font-size: 18px; margin-bottom: 10px;
+}
 .Suptext {
     margin-left: 0px;
+}
+p a, .Twitter  {
+    color: rgb(32, 32, 32); font-weight: bold;
+}
+li a {
+    color: rgb(32, 32, 32); font-weight: bold; 
+}
+.TwitterSec {
+    text-align: center;
 }
 .ProfileBox {
     display: flex;
@@ -159,7 +175,7 @@ h3 {
 }
 article h3 {
     text-align: left;
-    border-bottom: solid rgb(223, 223, 223) 1px;
+   
 }
 section {
     margin: 0 2%; margin-left: 0px;
@@ -174,4 +190,24 @@ article {
     h1 {
         font-size: 40px;
 }
+}
+.Playbtn {
+    height: 30px;
+    width: 45px;
+    transform: rotate(90deg);
+}
+.LinkLine {
+    margin-bottom: 26px; margin-top: 22px;  
+}
+.Inf {
+    font-size: 22px;
+}
+.InfLine {
+    border-bottom: solid rgb(223, 223, 223) 1px;
+}
+.LinkBlocks {
+    margin-left: 40px;
+}
+.InfCaption {
+    font-size: 14px;
 }
