--- a/Style.css
+++ b/Style.css
@@ -191,11 +191,6 @@ article {
         font-size: 40px;
 }
 }
-.Playbtn {
-    height: 30px;
-    width: 45px;
-    transform: rotate(90deg);
-}
 .LinkLine {
     margin-bottom: 26px; margin-top: 22px;  
 }
@@ -210,4 +205,20 @@ article {
 }
 .InfCaption {
     font-size: 14px;
+}
+.ErrorImgContainer {
+    display: flex;
+}
+.Errorimg {
+    width: 30%; height:30%;
+    object-fit: contain; margin-left: auto; margin-right: auto;  
+}
+p {
+    font-family: 'Mulish', sans-serif;
+}
+.LinkSubBlocks {
+    margin-left: -30px;
+}
+.LinksReads2 {
+    margin-top: 65px;
 }
