--- a/Style.css
+++ b/Style.css
@@ -117,7 +117,7 @@ a .active, a:hover {
 @media (max-width: 778px) {
     .Main{
         grid-template-columns: 1fr;
-        grid-template-rows: 0.5fr 4fr ;
+        grid-template-rows: 1fr, 4fr;
         grid-template-areas: "Sidebar" "Content" ;
     }
     .Content {
@@ -145,20 +145,24 @@ article p sup {
     border-bottom: solid rgb(223, 223, 223) 1px;
 }
 h2 { 
-    padding-top: 10px;
+    padding-top: 10px;  font-size: 39px;
 }
 h3 {
-    margin-bottom: 5px;
+    margin-bottom: 5px; 
 }
 h4 {
     font-size: 18px; margin-bottom: 10px;
 }
+.MiniTitle {
+    font-size: 18px;
+}
 .Suptext {
     margin-left: 0px;
 }
-p a, .Twitter  {
+p a, .Twitterlink  {
     color: rgb(32, 32, 32); font-weight: bold;
 }
+
 li a {
     color: rgb(32, 32, 32); font-weight: bold; 
 }
@@ -195,13 +199,13 @@ article {
     margin-bottom: 26px; margin-top: 22px;  
 }
 .Inf {
-    font-size: 22px;
+    font-size: 22px; margin-top: 50px;
 }
 .InfLine {
     border-bottom: solid rgb(223, 223, 223) 1px;
 }
 .LinkBlocks {
-    margin-left: 40px;
+    margin-left: 20px;
 }
 .InfCaption {
     font-size: 14px;
@@ -220,5 +224,28 @@ p {
     margin-left: -30px;
 }
 .LinksReads2 {
-    margin-top: 65px;
+    margin-top: 35px;
+}
+.PostLinks {
+    margin-bottom: 20px;
+}
+
+p i { margin-right: 15px;
+
+}
+p i, .Naturally {
+    margin-right: 0px;
+}
+.AboutPage {
+    margin-left: 12%; margin-right: 12%;
+}
+.Quote {
+    font-style: italic;
+}
+
+.LinksPage {
+    margin-bottom: 60px;
+}
+.Italics {
+    font-style: italic;
 }
